compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/classInitializer.kt
// FIR_IDENTICAL
class A {
    <!DUPLICATE_CLASS_NAMES!>class B<!>
    init {
        <!DUPLICATE_CLASS_NAMES!>class B<!>
    }
}
